--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@popperjs/core": "^2.5.4",
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
         "bootstrap": "^4.5.3",
+        "jquery": "^3.5.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-feather": "^2.0.8",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "sass": "^1.29.0",
