--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.2.5",
         "@popperjs/core": "^2.5.4",
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
         "bootstrap": "^4.5.3",
+        "graphql": "^15.4.0",
         "jquery": "^3.5.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
